Fixed and aligned the stats band but not done yet. Im thinking of going in chronological order so i will go back to doing css for "about" first.

--- a/WEBSITE PROJECT ASSESSMENT/style.css
+++ b/WEBSITE PROJECT ASSESSMENT/style.css
@@ -179,7 +179,7 @@ body {
   border-color: var(--red);
 }
 
-.band-num {
+.band-number {
   display: block;
   font-family: 'Bebas Neue', sans-serif;
   font-size: 3rem;
